- Fixed timeout issues by immediately sending the head of the response.

0.2.0
- Using Thin as the server
- Using Selenium to run the browsers
- Added instructions to run JsSpec on CI
- Added js_spec as an executable

0.1.0
- Added RailsServer
- Better namespacing

0.0.1
- Initial Release