@@ -1,2 +1,6 @@
+// require('/implementations/your_js_file');
+// stylesheet('/stylesheets/your_css_file');
+
 Spec.reset = function() {
+  document.getElementById('js_spec_content').innerHTML = "";
 }
